fix: package of fixes for `javac` (#1434)
fix: register support for zip file system
fix: usage of `elide javac --` from gradle
fix: usage of `elide javac -- ... --[source|target] X`
fix: usage of `elide javac -- ... --release X`
fix: missing bundle registrations for `javac` with `--source` / `--target`
fix: missing native registrations (generally)
fix: don't initialize `JDKPlatformProvider` at build time
fix: don't pass directories as sources to `javac`
chore: add sample gradle project for use with `elide javac ...`
chore: add sapmle maven project for testing

Fixes elide-dev/elide#1430
Fixes elide-dev/elide#1435
Fixes elide-dev/elide#1436
Relates to elide-dev/elide#1431
Relates to elide-dev/elide#1432

Signed-off-by: Sam Gammon <sam@elide.dev>